# morphic

./: .gitignore  README.md  app.py  requirements-test.txt  requirements.txt
.github/workflows/: main.yml
physrisk-api/: CONTRIBUTING.md  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
physrisk-api/nginx/: Dockerfile  physrisk-api.conf
physrisk-api/scripts/: pipaudit.sh
physrisk-api/src/physrisk_api/app/: __init__.py  api.py  override_providers.py  service.py
physrisk-api/src/test/: test_api.py  test_app.py
tests/: conftest.py
tests/integration/: test_search.py
tests/unit/: test_api_manager.py
unified-search/: .env  main.py
unified-search/adapters/: physrisk.py  trafilatura.py  watchman.py
unified-search/models/: search_result.py
unified-search/utils/: api_manager.py
