[metadata]
name = physrisk-api
author = OS-Climate
author_email = joe.moorhouse@gmail.com
description = Physical risk API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/os-climate/physrisk-api
project_urls =
    Bug Tracker = https://github.com/os-climate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    waitress
    Flask
    flask-cors
    flask-jwt-extended
    physrisk-lib==0.30.0

[options.packages.find]
where = src
include = physrisk*
